force-app/main/default/objects/SCOC__HeaderList__c/SCOC__HeaderList__c.object-meta.xml
<CustomObject>
    <description>Response Entity Header List</description>
    <label>Header</label>
    <nameField>
        <displayFormat>HEADER-{00000}</displayFormat>
        <label>Header Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>