force-app/main/default/objects/SCOC__HeaderList__c/fields/SCOC__Preamble__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Preamble__c</fullName>
    <description>Preamble</description>
    <label>Preamble</label>
    <length>10</length>
    <type>Text</type>
</CustomField>