force-app/main/default/objects/SCOC__HeaderList__c/fields/SCOC__ReportDateTime__c.field-meta.xml
<CustomField>
    <fullName>SCOC__ReportDateTime__c</fullName>
    <description>Date and Time this report was obtained.</description>
    <label>Report Date Time</label>
    <type>DateTime</type>
</CustomField>