force-app/main/default/objects/SCOC__HeaderList__c/fields/SCOC__VendorReportID__c.field-meta.xml
<CustomField>
    <fullName>SCOC__VendorReportID__c</fullName>
    <description>VendorReportID</description>
    <label>VendorReportID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>